--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&family=Raleway:wght@700&family=Anton&family=Lora&family=Quicksand:wght@500&family=Open+Sans:wght@400&family=PT+Sans:wght@700&family=Amatic+SC:wght@700&family=Roboto+Condensed:wght@700&family=Slabo+27px&family=Ubuntu:wght@500&family=Anton&family=Roboto:wght@300&family=Permanent+Marker&family=Lobster&family=Merriweather:wght@700&family=Poppins:wght@600&family=Playfair+Display:wght@400&family=Archivo:wght@500&family=Raleway:wght@900&family=Nunito:wght@400&family=Quicksand:wght@300&family=Roboto:wght@400&family=Quicksand:wght@600&family=Fira+Sans:wght@300&family=Nunito:wght@800&family=Baloo+2:wght@600&family=Inter:wght@600&family=Archivo+Black:wght@900&family=Crimson+Pro:wght@500&family=Fira+Sans:wght@700&family=Julius+Sans+One&family=Anton&family=Open+Sans:wght@300&family=Arimo:wght@700&family=Fredoka+One&family=Abel&family=Work+Sans&family=Oswald&family=Arvo&family=Shadows+Into+Light&family=Cabin:wght@500&family=Bebas+Neue&family=Varela+Round&family=Oswald:wght@400&family=Rokkitt:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'League Spartan', sans-serif;
@@ -88,95 +88,73 @@
             border-radius: 8px;
         }
 
-        .slider-container {
-            margin-top: 20px;
-        }
-
-        .slider-container input {
-            width: 80%;
-            margin: 8px;
-        }
-
         @media (max-width: 768px) {
             canvas {
                 max-width: 90%;
             }
         }
+
+        .section {
+            margin-bottom: 20px;
+        }
+
+        .section label {
+            font-size: 16px;
+            font-weight: bold;
+            display: block;
+            margin-top: 10px;
+        }
+
+        .section input, .section select {
+            margin-top: 5px;
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
         <h1>⚽ Football Badge Graphic Maker ⚽</h1>
-        <input type="file" id="badge1" accept="image/*">
-        <input type="file" id="badge2" accept="image/*">
-        <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
 
-        <label for="textColor">Text Color:</label>
-        <input type="color" id="textColor" value="#ffcc00">
+        <!-- Badges Section -->
+        <div class="section">
+            <h3>Badges</h3>
+            <input type="file" id="badge1" accept="image/*" />
+            <input type="file" id="badge2" accept="image/*" />
+        </div>
 
-        <label for="glowIntensity">Glow Intensity:</label>
-        <input type="range" id="glowIntensity" min="0" max="20" value="8">
+        <!-- Text Section -->
+        <div class="section">
+            <h3>Text</h3>
+            <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
+            <label for="textColor">Text Color:</label>
+            <input type="color" id="textColor" value="#ffcc00" />
+            <label for="glowIntensity">Glow Intensity:</label>
+            <input type="range" id="glowIntensity" min="0" max="20" value="8" />
+            <label for="fontSelect">Choose Font:</label>
+            <select id="fontSelect">
+                <option value="'League Spartan', sans-serif">League Spartan</option>
+                <option value="'Orbitron', sans-serif">Orbitron</option>
+                <option value="'Roboto', sans-serif">Roboto</option>
+                <option value="'Oswald', sans-serif">Oswald</option>
+                <option value="'Arial', sans-serif">Arial</option>
+                <option value="'Courier New', monospace">Courier New</option>
+                <option value="'Georgia', serif">Georgia</option>
+                <option value="'Impact', sans-serif">Impact</option>
+                <option value="'Tahoma', sans-serif">Tahoma</option>
+                <option value="'Verdana', sans-serif">Verdana</option>
+                <!-- Add more font options here as needed -->
+            </select>
+        </div>
 
-        <label for="fontSelect">Choose Font:</label>
-        <select id="fontSelect">
-            <option value="'League Spartan', sans-serif">League Spartan</option>
-            <option value="'Orbitron', sans-serif">Orbitron</option>
-            <option value="'Roboto', sans-serif">Roboto</option>
-            <option value="'Oswald', sans-serif">Oswald</option>
-            <option value="'Raleway', sans-serif">Raleway</option>
-            <option value="'Anton', sans-serif">Anton</option>
-            <option value="'Lora', serif">Lora</option>
-            <option value="'Quicksand', sans-serif">Quicksand</option>
-            <option value="'Open Sans', sans-serif">Open Sans</option>
-            <option value="'PT Sans', sans-serif">PT Sans</option>
-            <option value="'Amatic SC', cursive">Amatic SC</option>
-            <option value="'Roboto Condensed', sans-serif">Roboto Condensed</option>
-            <option value="'Slabo 27px', serif">Slabo 27px</option>
-            <option value="'Ubuntu', sans-serif">Ubuntu</option>
-            <option value="'Permanent Marker', cursive">Permanent Marker</option>
-            <option value="'Lobster', cursive">Lobster</option>
-            <option value="'Merriweather', serif">Merriweather</option>
-            <option value="'Poppins', sans-serif">Poppins</option>
-            <option value="'Playfair Display', serif">Playfair Display</option>
-            <option value="'Archivo', sans-serif">Archivo</option>
-            <option value="'Nunito', sans-serif">Nunito</option>
-            <option value="'Quicksand', sans-serif">Quicksand</option>
-            <option value="'Fira Sans', sans-serif">Fira Sans</option>
-            <option value="'Baloo 2', sans-serif">Baloo 2</option>
-            <option value="'Inter', sans-serif">Inter</option>
-            <option value="'Archivo Black', sans-serif">Archivo Black</option>
-            <option value="'Crimson Pro', serif">Crimson Pro</option>
-            <option value="'Julius Sans One', sans-serif">Julius Sans One</option>
-            <option value="'Arimo', sans-serif">Arimo</option>
-            <option value="'Fredoka One', cursive">Fredoka One</option>
-            <option value="'Abel', sans-serif">Abel</option>
-            <option value="'Work Sans', sans-serif">Work Sans</option>
-            <option value="'Arvo', serif">Arvo</option>
-            <option value="'Shadows Into Light', cursive">Shadows Into Light</option>
-            <option value="'Cabin', sans-serif">Cabin</option>
-            <option value="'Bebas Neue', sans-serif">Bebas Neue</option>
-            <option value="'Varela Round', sans-serif">Varela Round</option>
-            <option value="'Rokkitt', serif">Rokkitt</option>
-            <option value="'Pacifico', cursive">Pacifico</option>
-            <option value="'Caveat', cursive">Caveat</option>
-            <option value="'Satisfy', cursive">Satisfy</option>
-            <option value="'Tangerine', cursive">Tangerine</option>
-            <option value="'Lobster Two', cursive">Lobster Two</option>
-            <option value="'Dancing Script', cursive">Dancing Script</option>
-            <option value="'Great Vibes', cursive">Great Vibes</option>
-            <option value="'Bree Serif', serif">Bree Serif</option>
-            <option value="'Zen Dots', sans-serif">Zen Dots</option>
-            <option value="'Rock Salt', cursive">Rock Salt</option>
-        </select>
-
-        <!-- Hue, Brightness, and Saturation Controls -->
-        <div class="slider-container">
+        <!-- Background Section -->
+        <div class="section">
+            <h3>Background</h3>
             <label for="hue">Hue:</label>
-            <input type="range" id="hue" min="0" max="360" value="0">
+            <input type="range" id="hue" min="0" max="360" value="0" />
             <label for="brightness">Brightness:</label>
-            <input type="range" id="brightness" min="0" max="200" value="100">
+            <input type="range" id="brightness" min="0" max="200" value="100" />
             <label for="saturation">Saturation:</label>
-            <input type="range" id="saturation" min="0" max="200" value="100">
+            <input type="range" id="saturation" min="0" max="200" value="100" />
         </div>
 
         <button onclick="generateGraphic()">Generate Graphic</button>
@@ -196,7 +174,6 @@
         document.getElementById('badge1').addEventListener('change', handleFileSelect);
         document.getElementById('badge2').addEventListener('change', handleFileSelect);
 
-        // File select handler for badge images
         function handleFileSelect(event) {
             const file = event.target.files[0];
             const reader = new FileReader();
@@ -215,7 +192,6 @@
             reader.readAsDataURL(file);
         }
 
-        // Function to generate graphic with adjustments
         function generateGraphic() {
             if (!badge1 || !badge2) {
                 alert('Please upload both badges.');
@@ -223,63 +199,48 @@
             }
 
             const customText = document.getElementById('customText').value.trim();
-            const textLines = customText.split('\n'); 
+            const textLines = customText.split('\n');
             const textColor = document.getElementById('textColor').value;
             const glowIntensity = document.getElementById('glowIntensity').value;
             const selectedFont = document.getElementById('fontSelect').value;
 
-            // Get background filter values
             const hue = document.getElementById('hue').value;
             const brightness = document.getElementById('brightness').value;
             const saturation = document.getElementById('saturation').value;
 
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-            // Apply filter to background
+            // Apply the background adjustments
             ctx.filter = `hue-rotate(${hue}deg) brightness(${brightness}%) saturate(${saturation}%)`;
-
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
+            ctx.filter = 'none'; // Reset the filter for other elements
 
-            // Reset the filter
-            ctx.filter = 'none';
-
-            // Drawing the badges
             const badgeWidth = 180;
             const badgeHeight = 180;
-            const centerX = canvas.width / 2;
-            const badgeSpacing = 80;
-
-            const badge1X = centerX - badgeWidth - badgeSpacing;
-            const badge2X = centerX + badgeSpacing;
+            const badge1X = 100;
             const badge1Y = 100;
+            const badge2X = 320;
             const badge2Y = 100;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
 
-            // Drawing the text
             ctx.font = `30px ${selectedFont}`;
             ctx.fillStyle = textColor;
-            ctx.textAlign = "center";
-            ctx.shadowColor = textColor;
-            ctx.shadowBlur = glowIntensity;
-
-            const textStartY = badge1Y + badgeHeight + 30; 
-            const lineHeight = 35;
-
+            ctx.textAlign = 'center';
+            ctx.textBaseline = 'middle';
+            
+            // Place the text under the badges
+            let yOffset = badge1Y + badgeHeight + 20;  // Start text under the badges
             textLines.forEach((line, index) => {
-                ctx.fillText(line, canvas.width / 2, textStartY + (index * lineHeight));
+                ctx.fillText(line, canvas.width / 2, yOffset + (index * 40)); // Add spacing between lines
             });
-
-            ctx.shadowBlur = 0; 
         }
 
-        // Function to download the generated graphic
         function downloadImage() {
-            const dataUrl = canvas.toDataURL();
             const link = document.createElement('a');
-            link.href = dataUrl;
             link.download = 'football_badge_graphic.png';
+            link.href = canvas.toDataURL('image/png');
             link.click();
         }
     </script>
