--- a/imagemaker.html
+++ b/imagemaker.html
@@ -223,9 +223,9 @@
 
             const badgeWidth = 180;
             const badgeHeight = 180;
-            const badge1X = 100;
+            const badge1X = 70; // Adjusted position to add more space
             const badge1Y = 100;
-            const badge2X = 320;
+            const badge2X = 350; // Adjusted position to add more space
             const badge2Y = 100;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
