--- a/imagemaker.html
+++ b/imagemaker.html
@@ -51,31 +51,16 @@
             margin-bottom: 10px;
         }
 
-        .section label {
-            font-size: 16px;
-            font-weight: bold;
-            display: block;
-            margin-top: 10px;
-        }
-
-        .section input, .section select {
-            margin-top: 5px;
+        select, input, textarea {
             width: 90%;
             max-width: 400px;
             padding: 10px;
             font-size: 14px;
-            display: block;
             border: 2px solid #555;
             background: #181818;
             color: white;
             border-radius: 6px;
             outline: none;
-            transition: 0.3s;
-        }
-
-        .section input[type="color"] {
-            padding: 0;
-            width: 80px;
         }
 
         button {
@@ -108,59 +93,38 @@
             height: 400px;
             border-radius: 8px;
         }
-
-        @media (max-width: 768px) {
-            canvas {
-                max-width: 90%;
-            }
-        }
-
     </style>
 </head>
 <body>
     <div class="container">
         <h1>⚽ Football Badge Graphic Maker ⚽</h1>
 
-        <!-- Badges Section -->
+        <!-- Background Selection -->
         <div class="section">
-            <h3>Badges</h3>
-            <input type="file" id="badge1" accept="image/*" />
-            <input type="file" id="badge2" accept="image/*" />
-        </div>
-
-        <!-- Text Section -->
-        <div class="section">
-            <h3>Text</h3>
-            <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
-            <label for="textColor">Text Color:</label>
-            <input type="color" id="textColor" value="#ffcc00" />
-            <label for="glowIntensity">Glow Intensity:</label>
-            <input type="range" id="glowIntensity" min="0" max="20" value="8" />
-            <label for="fontSelect">Choose Font:</label>
-            <select id="fontSelect">
-                <option value="'League Spartan', sans-serif">League Spartan</option>
-                <option value="'Orbitron', sans-serif">Orbitron</option>
-                <option value="'Roboto', sans-serif">Roboto</option>
-                <option value="'Oswald', sans-serif">Oswald</option>
-                <option value="'Arial', sans-serif">Arial</option>
-                <option value="'Courier New', monospace">Courier New</option>
-                <option value="'Georgia', serif">Georgia</option>
-                <option value="'Impact', sans-serif">Impact</option>
-                <option value="'Tahoma', sans-serif">Tahoma</option>
-                <option value="'Verdana', sans-serif">Verdana</option>
-                <!-- Add more font options here as needed -->
+            <h3>Background</h3>
+            <label for="backgroundSelect">Choose Background:</label>
+            <select id="backgroundSelect">
+                <option value="https://i.ibb.co/MDbx54hm/image.png">Standard</option>
+                <option value="https://i.ibb.co/1GXsP8NT/image.png">Champions League</option>
+                <option value="https://i.ibb.co/bgxnc11X/image.png">Spanish RED</option>
+                <option value="https://i.ibb.co/bgRhxY8k/image.png">Europa League</option>
+                <option value="https://i.ibb.co/v40fk3jz/image.png">Black with Gradient</option>
             </select>
         </div>
 
-        <!-- Background Section -->
+        <!-- Badge Upload Section -->
         <div class="section">
-            <h3>Background</h3>
-            <label for="hue">Hue:</label>
-            <input type="range" id="hue" min="0" max="360" value="0" />
-            <label for="brightness">Brightness:</label>
-            <input type="range" id="brightness" min="0" max="200" value="100" />
-            <label for="saturation">Saturation:</label>
-            <input type="range" id="saturation" min="0" max="200" value="100" />
+            <h3>Badges</h3>
+            <input type="file" id="badge1" accept="image/*">
+            <input type="file" id="badge2" accept="image/*">
+        </div>
+
+        <!-- Text Customization -->
+        <div class="section">
+            <h3>Text</h3>
+            <textarea id="customText" placeholder="Enter match details"></textarea>
+            <label for="textColor">Text Color:</label>
+            <input type="color" id="textColor" value="#ffcc00">
         </div>
 
         <button onclick="generateGraphic()">Generate Graphic</button>
@@ -175,7 +139,11 @@
         let badge1 = null;
         let badge2 = null;
         let background = new Image();
-        background.src = 'https://i.ibb.co/MDbx54hm/image.png';
+        background.src = document.getElementById('backgroundSelect').value;
+
+        document.getElementById('backgroundSelect').addEventListener('change', function() {
+            background.src = this.value;
+        });
 
         document.getElementById('badge1').addEventListener('change', handleFileSelect);
         document.getElementById('badge2').addEventListener('change', handleFileSelect);
@@ -205,42 +173,27 @@
             }
 
             const customText = document.getElementById('customText').value.trim();
-            const textLines = customText.split('\n');
             const textColor = document.getElementById('textColor').value;
-            const glowIntensity = document.getElementById('glowIntensity').value;
-            const selectedFont = document.getElementById('fontSelect').value;
-
-            const hue = document.getElementById('hue').value;
-            const brightness = document.getElementById('brightness').value;
-            const saturation = document.getElementById('saturation').value;
 
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Apply the background adjustments
-            ctx.filter = `hue-rotate(${hue}deg) brightness(${brightness}%) saturate(${saturation}%)`;
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
-            ctx.filter = 'none'; // Reset the filter for other elements
 
             const badgeWidth = 180;
             const badgeHeight = 180;
-            const badge1X = 70; // Adjusted position to add more space
+            const spacing = 80;
+
+            const badge1X = (canvas.width / 2) - badgeWidth - (spacing / 2);
             const badge1Y = 100;
-            const badge2X = 350; // Adjusted position to add more space
+            const badge2X = (canvas.width / 2) + (spacing / 2);
             const badge2Y = 100;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
 
-            ctx.font = `30px ${selectedFont}`;
+            ctx.font = `30px 'League Spartan', sans-serif`; 
             ctx.fillStyle = textColor;
-            ctx.textAlign = 'center';
-            ctx.textBaseline = 'middle';
-            
-            // Place the text under the badges
-            let yOffset = badge1Y + badgeHeight + 20;  // Start text under the badges
-            textLines.forEach((line, index) => {
-                ctx.fillText(line, canvas.width / 2, yOffset + (index * 40)); // Add spacing between lines
-            });
+            ctx.textAlign = "center";
+            ctx.fillText(customText, canvas.width / 2, badge1Y + badgeHeight + 40);
         }
 
         function downloadImage() {
