--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'League Spartan', sans-serif;
@@ -29,38 +29,39 @@
             border: 2px solid #333;
         }
 
-        h1 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 24px;
-            color: #ffcc00;
-            text-shadow: 0px 0px 10px rgba(255, 204, 0, 0.6);
-        }
-
         .section {
-            background-color: #2c2c2c;
+            background: #181818;
             padding: 15px;
-            margin-bottom: 20px;
+            margin: 10px 0;
             border-radius: 8px;
-            border: 1px solid #444;
+            border: 2px solid #333;
         }
 
-        .section h3 {
-            margin: 0;
-            font-size: 20px;
-            color: #ffcc00;
+        h2 {
+            font-size: 18px;
             margin-bottom: 10px;
+            color: #ffcc00;
         }
 
-        select, input, textarea {
-            width: 90%;
-            max-width: 400px;
+        input, select, textarea {
+            margin: 8px;
             padding: 10px;
             font-size: 14px;
+            width: 90%;
+            max-width: 400px;
+            display: block;
             border: 2px solid #555;
             background: #181818;
             color: white;
             border-radius: 6px;
             outline: none;
+            transition: 0.3s;
+        }
+
+        textarea {
+            height: 70px;
+            resize: none;
+            text-align: center;
         }
 
         button {
@@ -88,8 +89,7 @@
             border: 2px solid #ffcc00;
             margin-top: 15px;
             background: black;
-            width: 100%;
-            max-width: 600px;
+            width: 600px;
             height: 400px;
             border-radius: 8px;
         }
@@ -99,9 +99,21 @@
     <div class="container">
         <h1>⚽ Football Badge Graphic Maker ⚽</h1>
 
-        <!-- Background Selection -->
         <div class="section">
-            <h3>Background</h3>
+            <h2>🏆 Badges</h2>
+            <input type="file" id="badge1" accept="image/*">
+            <input type="file" id="badge2" accept="image/*">
+        </div>
+
+        <div class="section">
+            <h2>📝 Text</h2>
+            <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
+            <label for="textColor">Text Color:</label>
+            <input type="color" id="textColor" value="#ffcc00">
+        </div>
+
+        <div class="section">
+            <h2>🎨 Background</h2>
             <label for="backgroundSelect">Choose Background:</label>
             <select id="backgroundSelect">
                 <option value="https://i.ibb.co/MDbx54hm/image.png">Standard</option>
@@ -110,13 +122,10 @@
                 <option value="https://i.ibb.co/bgRhxY8k/image.png">Europa League</option>
                 <option value="https://i.ibb.co/v40fk3jz/image.png">Black with Gradient</option>
             </select>
-        </div>
-
-        <!-- Background Color Adjustment -->
-        <div class="section">
-            <h3>Background Color Adjustments</h3>
-            <label for="bgColor">Background Color:</label>
+            
+            <label for="bgColor">Custom Background Color:</label>
             <input type="color" id="bgColor" value="#000000">
+
             <label for="hue">Hue:</label>
             <input type="range" id="hue" min="0" max="360" value="0">
             <label for="brightness">Brightness:</label>
@@ -125,23 +134,8 @@
             <input type="range" id="saturation" min="50" max="150" value="100">
         </div>
 
-        <!-- Badge Upload Section -->
-        <div class="section">
-            <h3>Badges</h3>
-            <input type="file" id="badge1" accept="image/*">
-            <input type="file" id="badge2" accept="image/*">
-        </div>
-
-        <!-- Text Customization -->
-        <div class="section">
-            <h3>Text</h3>
-            <textarea id="customText" placeholder="Enter match details"></textarea>
-            <label for="textColor">Text Color:</label>
-            <input type="color" id="textColor" value="#ffcc00">
-        </div>
-
         <button onclick="generateGraphic()">Generate Graphic</button>
-        <canvas id="canvas" width="600" height="400"></canvas>
+        <canvas id="canvas"></canvas>
         <button onclick="downloadImage()">Download Graphic</button>
     </div>
 
@@ -149,14 +143,31 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
 
-        let badge1 = null;
-        let badge2 = null;
+        let badge1 = new Image();
+        let badge2 = new Image();
         let background = new Image();
+
         background.src = document.getElementById('backgroundSelect').value;
 
         document.getElementById('backgroundSelect').addEventListener('change', function() {
             background.src = this.value;
+            generateGraphic();
         });
+
+        function loadBadge(event, badgeImage) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    badgeImage.src = e.target.result;
+                    generateGraphic();
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        document.getElementById('badge1').addEventListener('change', (event) => loadBadge(event, badge1));
+        document.getElementById('badge2').addEventListener('change', (event) => loadBadge(event, badge2));
 
         function applyBackgroundColor() {
             const bgColor = document.getElementById('bgColor').value;
@@ -171,15 +182,10 @@
         }
 
         function generateGraphic() {
-            if (!badge1 || !badge2) {
-                alert('Please upload both badges.');
-                return;
-            }
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             applyBackgroundColor();
-
-            const customText = document.getElementById('customText').value.trim();
-            const textColor = document.getElementById('textColor').value;
+            ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
 
             const badgeWidth = 180;
             const badgeHeight = 180;
@@ -189,8 +195,11 @@
             const badge2X = (canvas.width / 2) + (spacing / 2);
             const badgeY = 100;
 
-            ctx.drawImage(badge1, badge1X, badgeY, badgeWidth, badgeHeight);
-            ctx.drawImage(badge2, badge2X, badgeY, badgeWidth, badgeHeight);
+            if (badge1.src) ctx.drawImage(badge1, badge1X, badgeY, badgeWidth, badgeHeight);
+            if (badge2.src) ctx.drawImage(badge2, badge2X, badgeY, badgeWidth, badgeHeight);
+
+            const customText = document.getElementById('customText').value.trim();
+            const textColor = document.getElementById('textColor').value;
 
             ctx.font = `30px 'League Spartan', sans-serif`; 
             ctx.fillStyle = textColor;
