--- a/imagemaker.html
+++ b/imagemaker.html
@@ -142,9 +142,9 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
             
-            const badgeWidth = 120, badgeHeight = 120;
-            const badge1X = (canvas.width / 2) - 140;
-            const badge2X = (canvas.width / 2) + 20;
+            const badgeWidth = 150, badgeHeight = 150;
+            const badge1X = (canvas.width / 2) - 150 - 70;
+            const badge2X = (canvas.width / 2) + 70;
             const badgeY = 100;
             ctx.drawImage(badge1, badge1X, badgeY, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badgeY, badgeWidth, badgeHeight);
