--- a/imagemaker.html
+++ b/imagemaker.html
@@ -142,9 +142,10 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
             
-            const badgeWidth = 150, badgeHeight = 150;
-            const badge1X = (canvas.width / 2) - 150 - 70;
-            const badge2X = (canvas.width / 2) + 70;
+            // Increased badge size and distance between them
+            const badgeWidth = 200, badgeHeight = 200;  // Increased size
+            const badge1X = (canvas.width / 2) - 200 - 100;  // Moved further to the left
+            const badge2X = (canvas.width / 2) + 100;       // Moved further to the right
             const badgeY = 100;
             ctx.drawImage(badge1, badge1X, badgeY, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badgeY, badgeWidth, badgeHeight);
