--- a/imagemaker.html
+++ b/imagemaker.html
@@ -150,7 +150,7 @@
             <input type="range" id="glowIntensity" min="0" max="20" value="8" />
             <label for="fontSelect">Choose Font:</label>
             <select id="fontSelect">
-                <option value="'League Spartan', sans-serif">League Spartan</option>
+                <option value="'League Spartan', sans-serif">Sportwave Sans</option>
                 <option value="'Orbitron', sans-serif">Orbitron</option>
                 <option value="'Roboto', sans-serif">Roboto</option>
                 <option value="'Oswald', sans-serif">Oswald</option>
