--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'League Spartan', sans-serif;
