--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,261 @@
-<iframe src="https://sites.google.com/view/swgallerygh/home" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Sportwave News</title>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Outfit', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #121212;
+            color: #fff;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 2rem auto;
+            padding: 1rem;
+        }
+        h1 {
+            text-align: center;
+            font-size: 3rem;
+        }
+        #search {
+            width: 100%;
+            padding: 0.8rem;
+            margin-bottom: 2rem;
+            border: none;
+            border-radius: 12px;
+            font-size: 1rem;
+        }
+        .news-item {
+            background: #1e1e1e;
+            padding: 1.5rem;
+            margin-bottom: 1.5rem;
+            border-radius: 16px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            height: auto;
+        }
+        .news-item h2 {
+            font-size: 1.8rem;
+        }
+        .news-item a {
+            color: #00bcd4;
+            text-decoration: none;
+        }
+        .news-item a:hover {
+            text-decoration: underline;
+        }
+        .carousel {
+            position: relative;
+            max-width: 100%;
+            margin: 1rem 0;
+            overflow: hidden;
+            height: 0;
+        }
+        .carousel img {
+            width: 100%;
+            height: auto;
+            display: none;
+        }
+        .carousel img.active {
+            display: block;
+        }
+        .carousel-control {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            border: none;
+            padding: 0.5rem;
+            cursor: pointer;
+        }
+        .carousel-control.left {
+            left: 10px;
+        }
+        .carousel-control.right {
+            right: 10px;
+        }
+        .description {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Sportwave News</h1>
+        <input type="text" id="search" placeholder="Search News by Title...">
+        <div id="news-container"></div>
+    </div>
+
+    <script>
+        // Prevent using cookies
+        document.cookie = "name=value; expires=Thu, 01 Jan 1970 00:00:00 GMT"; // Delete any cookies
+        
+        // Disable localStorage and sessionStorage usage:
+        if (typeof(Storage) !== "undefined") {
+            // Clear storage if it's already populated
+            localStorage.clear();
+            sessionStorage.clear();
+        }
+
+        // Disable caching via JavaScript
+        const rssFeedUrl = 'https://sportwaveannouncements.blogspot.com/feeds/posts/default';
+
+        async function fetchRSS() {
+            try {
+                const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssFeedUrl)}&cache=0`);
+                const data = await response.json();
+                displayNews(data.items);
+            } catch (error) {
+                console.error('Error fetching RSS feed:', error);
+            }
+        }
+
+        function displayNews(items) {
+            const container = document.getElementById('news-container');
+            container.innerHTML = '';
+
+            items.forEach(item => {
+                const newsItem = document.createElement('div');
+                newsItem.className = 'news-item';
+
+                // Clean the description to remove any images
+                let cleanedDescription = item.description.replace(/<img[^>]*>/g, '');
+
+                // Add the title and cleaned description
+                let htmlContent = `
+                    <h2>${item.title}</h2>
+                    <p class="description">${cleanedDescription}</p>
+                    <a href="${item.link}" target="_blank">Read More</a>
+                `;
+
+                // Extract image URLs from the description
+                const imageUrls = [];
+                const regex = /https:\/\/blogger\.googleusercontent\.com\/img\/[^"]+/g;
+                const matches = item.description.match(regex);
+
+                if (matches) {
+                    matches.forEach(url => {
+                        // Only include full-size images (those with 's1920')
+                        if (url.includes('/s1920/')) {
+                            imageUrls.push(url); // Add only the full-size images to the array
+                        }
+                    });
+
+                    // Create carousel for the images
+                    htmlContent += `
+                        <div class="carousel">
+                            ${imageUrls.map((imgUrl, index) => {
+                                return `<img src="${imgUrl}" data-src="${imgUrl}" class="carousel-image lazy" alt="Image ${index + 1}">`;
+                            }).join('')}
+                        </div>
+                    `;
+
+                    // If there are more than one image, hide the description and show the carousel
+                    if (imageUrls.length > 1) {
+                        htmlContent = htmlContent.replace('<p class="description">', '<p class="description" style="display: none;">');
+                    }
+                }
+
+                newsItem.innerHTML = htmlContent;
+
+                // Remove elements with no text
+                const description = newsItem.querySelector('.description');
+                if (description && !description.textContent.trim()) {
+                    description.style.display = 'none';
+                }
+
+                // Check if the title or content is empty and remove the entire news item if so
+                const title = newsItem.querySelector('h2');
+                if (!title || !title.textContent.trim()) {
+                    newsItem.style.display = 'none';
+                }
+
+                container.appendChild(newsItem);
+
+                // Add carousel functionality for images
+                const carousel = newsItem.querySelector('.carousel');
+                if (carousel) {
+                    const images = carousel.getElementsByTagName('img');
+                    let currentIndex = 0;
+
+                    // Show the first image
+                    images[currentIndex].classList.add('active');
+
+                    // Add next/previous controls
+                    const prevButton = document.createElement('button');
+                    prevButton.className = 'carousel-control left';
+                    prevButton.textContent = '<';
+                    prevButton.onclick = () => changeImage(-1);
+
+                    const nextButton = document.createElement('button');
+                    nextButton.className = 'carousel-control right';
+                    nextButton.textContent = '>';
+                    nextButton.onclick = () => changeImage(1);
+
+                    carousel.appendChild(prevButton);
+                    carousel.appendChild(nextButton);
+
+                    // Change image function
+                    function changeImage(direction) {
+                        images[currentIndex].classList.remove('active');
+                        currentIndex = (currentIndex + direction + images.length) % images.length;
+                        images[currentIndex].classList.add('active');
+                    }
+
+                    // If there's more than one image, adjust the container size to match the carousel height
+                    if (images.length > 1) {
+                        carousel.style.height = `${images[0].height}px`;
+                    }
+
+                    // Lazy load images when they are in the viewport
+                    loadImagesOnScroll();
+
+                    // Check if images are in the viewport and load them
+                    function loadImagesOnScroll() {
+                        const lazyImages = document.querySelectorAll('.lazy');
+                        const imageObserver = new IntersectionObserver((entries, observer) => {
+                            entries.forEach(entry => {
+                                if (entry.isIntersecting) {
+                                    const img = entry.target;
+                                    img.src = img.getAttribute('data-src');
+                                    img.classList.remove('lazy');
+                                    observer.unobserve(img);
+                                }
+                            });
+                        }, { threshold: 0.1 });
+
+                        lazyImages.forEach(image => {
+                            imageObserver.observe(image);
+                        });
+                    }
+                }
+            });
+        }
+
+        document.getElementById('search').addEventListener('input', (e) => {
+            const query = e.target.value.toLowerCase();
+            const newsItems = document.querySelectorAll('.news-item');
+
+            newsItems.forEach(item => {
+                const title = item.querySelector('h2').textContent.toLowerCase();
+                item.style.display = title.includes(query) ? 'block' : 'none';
+            });
+        });
+
+        // Initial fetch
+        fetchRSS();
+
+        // Live update every 30 seconds
+        setInterval(fetchRSS, 30000);
+    </script>
+</body>
+</html>
